src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_statements_tests__missing_comma_in_call_parameters.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error[E006]: Missing expected Token `,`
  ┌─ <internal>:3:29
  │
3 │                     buz(a,b c);
  │                             ^ Missing expected Token `,`
